--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y bc build-essential flex bison libssl-dev libelf-dev git zip
-          sudo apt-get install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi
+          sudo apt-get install -y clang lld llvm gcc-aarch64-linux-gnu
 
       - name: Download Mint Kernel Source
         run: |
@@ -26,7 +26,6 @@ jobs:
       - name: Force Enable Kernel Features (OverlayFS & KSU)
         run: |
           cd kernel-source
-          # التأكد من تفعيل الخيارات اللازمة لتجاوز مشكلة تويتر
           echo "CONFIG_OVERLAY_FS=y" >> arch/arm64/configs/a50_defconfig
           echo "CONFIG_KSU=y" >> arch/arm64/configs/a50_defconfig
 
@@ -35,9 +34,8 @@ jobs:
           cd kernel-source
           export ARCH=arm64
           export CROSS_COMPILE=aarch64-linux-gnu-
-          export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
           make a50_defconfig
-          make -j$(nproc) CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi-
+          make -j$(nproc) ARCH=arm64 CC=clang CROSS_COMPILE=aarch64-linux-gnu-
 
       - name: Create Flashable ZIP (AnyKernel3)
         run: |
