--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y bc build-essential flex bison libssl-dev libelf-dev git zip
-          sudo apt-get install -y clang lld llvm gcc-aarch64-linux-gnu
+          sudo apt-get install -y gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi clang lld llvm
 
       - name: Download Mint Kernel Source
         run: |
@@ -26,6 +26,7 @@ jobs:
       - name: Force Enable Kernel Features (OverlayFS & KSU)
         run: |
           cd kernel-source
+          # تفعيل الخيارات اللازمة لتعمل إضافات تخطي حماية تويتر
           echo "CONFIG_OVERLAY_FS=y" >> arch/arm64/configs/a50_defconfig
           echo "CONFIG_KSU=y" >> arch/arm64/configs/a50_defconfig
 
@@ -34,18 +35,20 @@ jobs:
           cd kernel-source
           export ARCH=arm64
           export CROSS_COMPILE=aarch64-linux-gnu-
+          export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
           make a50_defconfig
-          make -j$(nproc) ARCH=arm64 CC=clang CROSS_COMPILE=aarch64-linux-gnu-
+          make -j$(nproc) CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi-
 
       - name: Create Flashable ZIP (AnyKernel3)
         run: |
           git clone https://github.com/osm0sis/AnyKernel3.git
+          # نسخ ملف الكرنل المبني إلى مجلد الضغط
           cp kernel-source/arch/arm64/boot/Image.gz-dtb AnyKernel3/
           cd AnyKernel3
-          zip -r9 ../A50-Mint-KSU-3.1.0.zip * -x .git* README.md
+          zip -r9 ../A50-Mint-KSU-3.1.0-Final.zip * -x .git* README.md
 
       - name: Upload Flashable ZIP
         uses: actions/upload-artifact@v4
         with:
           name: Flashable-Kernel-Final
-          path: A50-Mint-KSU-3.1.0.zip
+          path: A50-Mint-KSU-3.1.0-Final.zip
