--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,66 +1,44 @@
-name: Build A50 Kernel (Final Fix)
+name: Build A50 Kernel (1121)
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Maximize Build Space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 512
-          swap-size-mb: 1024
-          remove-dotnet: 'true'
-
       - name: Setup Build Environment
         run: |
           sudo apt-get update
-          sudo apt-get install -y bc build-essential flex bison libssl-dev libelf-dev git zip clang lld llvm gcc-aarch64-linux-gnu
+          sudo apt-get install -y bc build-essential flex bison libssl-dev libelf-dev git zip gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi clang lld llvm
 
-      - name: Download Kernel & Toolchain
+      - name: Download Kernel Source
         run: |
-          # تحميل السورس
+          # تحميل سورس Mint الرسمي لـ A50
           git clone --depth=1 https://github.com/FreshROMs/android_kernel_samsung_exynos9610_mint.git -b xbeta kernel-source
-          
-          # تحميل المترجم الاحترافي
-          git clone --depth=1 https://gitlab.com/re-index/proton-clang.git clang
 
-      - name: Integrate KernelSU 3.1.0
+      - name: Setup KernelSU 3.1.0
         run: |
           cd kernel-source
           curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s main
 
-      - name: Build Kernel
+      - name: Build Kernel Image
         run: |
           cd kernel-source
           export ARCH=arm64
-          export KBUILD_BUILD_USER="yesine13"
-          export KBUILD_BUILD_HOST="Github-Actions"
-          export PATH=$GITHUB_WORKSPACE/clang/bin:$PATH
-          
-          make O=out a50_defconfig
-          make -j$(nproc --all) O=out \
-                      ARCH=arm64 \
-                      CC=clang \
-                      CROSS_COMPILE=aarch64-linux-gnu- \
-                      CROSS_COMPILE_ARM32=arm-linux-gnueabi- \
-                      LD=ld.lld \
-                      AR=llvm-ar \
-                      NM=llvm-nm \
-                      OBJCOPY=llvm-objcopy \
-                      OBJDUMP=llvm-objdump \
-                      STRIP=llvm-strip
+          export CROSS_COMPILE=aarch64-linux-gnu-
+          export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
+          make a50_defconfig
+          make -j$(nproc --all) ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi-
 
-      - name: Package ZIP
+      - name: Create Flashable ZIP
         run: |
-          git clone https://github.com/osm0sis/AnyKernel3.git
-          cp kernel-source/out/arch/arm64/boot/Image.gz-dtb AnyKernel3/
+          git clone --depth=1 https://github.com/osm0sis/AnyKernel3.git
+          cp kernel-source/arch/arm64/boot/Image.gz-dtb AnyKernel3/
           cd AnyKernel3
           zip -r9 ../A50-KSU-Final.zip *
 
-      - name: Upload Result
+      - name: Upload Kernel
         uses: actions/upload-artifact@v4
         with:
-          name: Kernel-A50-Fixed
+          name: Kernel-A50-KSU
           path: A50-KSU-Final.zip
