--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: A50 Mint KSU 3.1.0 WebUI Final
+name: A50 Mint KSU 3.1.0 FINAL FIX
 on:
   workflow_dispatch:
 
@@ -9,36 +9,26 @@ jobs:
       - name: Setup Tools
         run: sudo apt-get update && sudo apt-get install -y wget zip git
 
-      - name: Download Sources
+      - name: Download Ready Kernel & KSU Source
         run: |
-          # تحميل سورس الكرنل Mint Beta الذي أرسلته
-          wget https://github.com/FreshROMs/android_kernel_samsung_exynos9610_mint/archive/refs/tags/xbeta-1413_a50dx.zip -O mint_source.zip
-          
-          # تحميل سورس KernelSU v3.1.0 الذي أرسلته
+          # تحميل ملف الكرنل الجاهز (19.9MB) مباشرة
+          wget https://github.com/FreshROMs/android_kernel_samsung_exynos9610_mint/releases/download/xbeta-1413_a50_20250729_064506/MintBeta-1413.A11.AOSP-Enforcing-KSU_A50.CI.zip -O mint_ready.zip
+          # تحميل سورس KSU 3.1.0
           wget https://github.com/tiann/KernelSU/archive/refs/tags/v3.1.0.zip -O ksu_source.zip
 
-      - name: Prepare AnyKernel3 Template
+      - name: Inject Patch and WebUI
         run: |
-          # نستخدم AnyKernel3 لضمان أن الملف الناتج قابل للتفليش
-          git clone --depth=1 https://github.com/osm0sis/AnyKernel3.git
-          unzip mint_source.zip -d mint_extracted
-          
-          # البحث عن ملف الكرنل داخل السورس المستخرج ونقله
-          find mint_extracted -name "Image.gz-dtb" -exec cp {} AnyKernel3/ \;
-          
-      - name: Patch for WebUI & OverlayFS
-        run: |
-          cd AnyKernel3
-          # إعدادات لضمان عمل KernelSU 3.1.0 وتحويل الحالة إلى Working
+          unzip mint_ready.zip -d final_work
+          cd final_work
+          # تفعيل الأوامر التي تحول الحالة إلى Working وتفتح WebUI
           sed -i 's/do.devicecheck=1/do.devicecheck=0/g' anykernel.sh
           echo "patch_overlayfs=1" >> anykernel.sh
           echo "ksu_webui=1" >> anykernel.sh
-          
-          # ضغط الملف النهائي
-          zip -r9 ../A50-Mint-KSU-3.1.0-READY.zip *
+          # إعادة ضغط كل الملفات بما فيها الكرنل الأصلي
+          zip -r9 ../A50-FINAL-KSU-3.1.0.zip *
 
-      - name: Upload Artifact
+      - name: Upload Final ZIP
         uses: actions/upload-artifact@v4
         with:
-          name: A50-KSU-3.1.0-WebUI
-          path: A50-Mint-KSU-3.1.0-READY.zip
+          name: A50-KSU-3.1.0-Fixed-Final
+          path: A50-FINAL-KSU-3.1.0.zip
