--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,24 +9,24 @@ jobs:
       - name: Setup Tools
         run: sudo apt-get update && sudo apt-get install -y wget zip git
 
-      - name: Download Kernel & KSU
+      - name: Download Files
         run: |
-          # الرابط المباشر الصحيح لملف الكرنل (19.9MB)
-          wget "https://github.com/FreshROMs/android_kernel_samsung_exynos9610_mint/releases/download/xbeta-1413_a50_20250729_064506/MintBeta-1413.A11.AOSP-Enforcing-KSU_A50.CI.zip" -O kernel.zip
-          # تحميل سورس KSU 3.1.0
-          wget "https://github.com/tiann/KernelSU/archive/refs/tags/v3.1.0.zip" -O ksu.zip
+          # استخدام رابط ثابت ومباشر لضمان عدم حدوث 404
+          wget -O kernel.zip "https://github.com/FreshROMs/android_kernel_samsung_exynos9610_mint/releases/download/xbeta-1413_a50_20250729_064506/MintBeta-1413.A11.AOSP-Enforcing-KSU_A50.CI.zip"
+          wget -O ksu.zip "https://github.com/tiann/KernelSU/archive/refs/tags/v3.1.0.zip"
 
-      - name: Inject Patch
+      - name: Inject Patch and WebUI
         run: |
           unzip kernel.zip -d work_dir
           cd work_dir
-          # تعديل الملفات لتفعيل Working و WebUI
+          # تعديل ملف anykernel لتفعيل OverlayFS و Working
           sed -i 's/do.devicecheck=1/do.devicecheck=0/g' anykernel.sh
           echo "patch_overlayfs=1" >> anykernel.sh
           echo "ksu_webui=true" >> anykernel.sh
+          # إعادة ضغط الملف بالكامل
           zip -r9 ../A50-KSU-3.1.0-FIXED.zip *
 
-      - name: Upload Result
+      - name: Upload Final ZIP
         uses: actions/upload-artifact@v4
         with:
           name: A50-KSU-3.1.0-READY
